--- a/Springmvc_qn12/.settings/org.eclipse.wst.common.component
+++ b/Springmvc_qn12/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="Spring_MVC_02">
+    <wb-module deploy-name="SpringMvc_qn12-0.0.1-SNAPSHOT">
                         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
@@ -14,10 +14,8 @@
                         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                        
-        
-        <property name="java-output-path" value="/Springmvc_qn2/target/classes"/>
-        <property name="context-root" value="Spring_MVC_02"/>
+        <property name="java-output-path" value="/Springmvc_qn12/target/classes"/>
+        <property name="context-root" value="SpringMvc_qn12"/>
                     
     
     </wb-module>
